--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- list Items -->
         <div class="list">
             <div class="item active">
-                <img src="img1.gif">
+                <img src="img1 (1).gif">
                 <div class="content">
                     <p>design</p>
                     <h2>L0CKWS</h2>
