--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- list Items -->
         <div class="list">
             <div class="item active">
-                <img src="img1 (1).gif">
+                <img src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*PI4elf8n96iiqQbtuwtYkA.gif">
                 <div class="content">
                     <p>design</p>
                     <h2>L0CKWS</h2>
