--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- list Items -->
         <div class="list">
             <div class="item active">
-                <img src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*PI4elf8n96iiqQbtuwtYkA.gif">
+                <img style="display: block;-webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);" src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*PI4elf8n96iiqQbtuwtYkA.gif" width="705" height="302">
                 <div class="content">
                     <p>design</p>
                     <h2>L0CKWS</h2>
